# Downloader

./: CMakeLists.txt  README.md  compile_and_run.ps1  config.xml
src/: Downloader.java
src/context/: MainSurfaceContext.java
src/download/: DownloadStatus.java  FileDownloader.java
src/log/: LogDebug.java  LogError.java  LogInfo.java  LogWarn.java
src/network/: DownloadStatus.java  DownloadStatusRef.java  FileDownloader.java
src/services/: DownloadService.java
src/surface/: DownloadTask.java  MainSurface.java  RunningTaskList.java  RunningTaskListMouseAdapter.java  TaskLabel.java  TaskList.java  TaskListModel.java  TaskListModelPeriodicUpdateTask.java  TaskListMouseAdapter.java
src/utils/: ConfigFileHelper.java  ConfigHelper.java  FileHelper.java  HumanReadHelper.java  StreamLengthHelper.java
